@@ -40,3 +40,12 @@ an application.)
 </para>
 
 
+<!-- ##### FUNCTION gtk_bin_get_child ##### -->
+<para>
+
+</para>
+
+@bin: 
+@Returns: 
+
+
