@@ -1,3 +1,7 @@
+2001-05-22  Havoc Pennington  <hp@pobox.com>
+
+	* gtk/gtk-sections.txt: add gtk_bin_get_child
+
 Fri May 18 12:28:08 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/tmpl/gtksizegroup.sgml gtk/gtk-sections.txt gtk/gtk.types:
